# GamPola

./: CMakeLists.txt
examples_standalone/: CMakeLists.txt  bf2.cxx  calculateNormInts.cxx  fitter.cxx  generator.cxx  ks.cxx  plotter.cxx
examples_standalone/additionalFiles/: ginac-excompiler2  model.fit  model.ge  model4BF2.fit  model_default.fit  plot.img
include/: GBF2.h  GBF2Ana.h  GBF2Analytical.h  GEventsAnalyzer.h  GEventsGenerator.h  GExCompiler.h  GFitter.h  GFittingParameters.h  GGOFKolmogorovTest.h  GGenerator.h  GGoodnessOfFit.h  GInterfaceForMinimization.h  GRootTreeReader.h  GSymbolicExpressionsAnalyzer.h  GSymbolicMathFunctions.h  GWriteToFile.h  GWriteToTree.h
include/EvtGenModels/: EvtGBreitWigner.hh  EvtGCouplingConstants.hh  EvtGDecayRate.hh  EvtGFormFactors.hh  EvtGInterfaceForMathFunctions.hh  EvtGKinematics.hh  EvtGMathFunctions.hh  EvtGPhysicsPDG.hh  EvtGQuarkPairCreationModel.hh  EvtGResPseudoTensor.hh  EvtGResPseudoTensor2Tensor.hh  EvtGResPseudoVector.hh  EvtGResTensor.hh  EvtGResVector.hh  EvtGSimpleRandomEngine.hh  EvtGVector3D.h  EvtGVector4D.hh
include/GamPolaParser/: GCutsParser.h  GFitterParser.h  GGeneratorParser.h  GPlotterParser.h
include/GamPolaPlotter/: GGampolaPlotter.h
src/: GBF2.cxx  GBF2Ana.cxx  GBF2Analytical.cxx  GEventsAnalyzer.cxx  GEventsGenerator.cxx  GExCompiler.cxx  GFitter.cxx  GFittingParameters.cxx  GGOFKolmogorovTest.cxx  GGenerator.cxx  GGoodnessOfFit.cxx  GInterfaceForMinimization.cxx  GSymbolicMathFunctions.cxx  GSymbolicsExpressionsAnalyzer.cxx  GWriteToFile.cxx  GWriteToTree.cxx
src/EvtGenModels/: EvtGBreitWigner.cpp  EvtGCouplingConstants.cpp  EvtGDecayRate.cpp  EvtGFormFactors.cpp  EvtGInterfaceForMathFunctions.cpp  EvtGKinematics.cpp  EvtGMathFunctions.cpp  EvtGQuarkPairCreationModel.cpp  EvtGResPseudoTensor.cpp  EvtGResPseudoTensor2Tensor.cpp  EvtGResPseudoVector.cpp  EvtGResTensor.cpp  EvtGResVector.cpp  EvtGSimpleRandomEngine.cpp  EvtGVector3D.cpp  EvtGVector4D.cpp
